# ScoreCheck

./: .gitignore  VERCEL_DEPLOYMENT.md  design-qa.md
vision/: ARCHITECTURE.md  FLYWHEEL.md  READINESS.md  README.md  pyproject.toml
vision/data/: provided-youtube-livestream-sources-v1.json
vision/docs/: V2_ADJUDICATION.md  architecture-v1.html
vision/experiments/: README.md
vision/harness/: eval_rally_attribution.py
vision/scripts/: archive_corpus.sh  build_corpus.py  harvest_digit_templates.py  make_split_manifest.py  retier_rallies.py  spec_from_states.py
vision/tests/: test_rules.py  test_score_timeline.py  test_scorebug_parse.py
vision_scoring/: README.md  pyproject.toml
vision_scoring/examples/: capture-rights-trust-snapshot.json  capture-session-rights-grant-attestation.json  capture-session-rights-grant.json  dataset-manifest-attestation.json  dataset-trust-store.json  protected-configuration-generation.json  readiness-manifest.json  readiness-verification-policy.json  rights-trust-store.json  rights-verification-policy.json
vision_scoring/scripts/: build_decoder_runtime_v1.py  generate_decoder_golden_fixture.py  generate_decoder_hevc10_golden_fixture.py  regenerate_readiness_fixtures.py  run_decoder_loader_development_v1.py
vision_scoring/tests/: __init__.py  test_annotation_trust.py  test_annotation_wire.py  test_annotations.py  test_artifact_store.py  test_authorization.py  test_ball_label_pack.py  test_ball_metrics.py  test_ball_model.py  test_ball_target_materialization.py  test_build_decoder_runtime_v1.py  test_capture_assets.py  test_capture_contracts.py  test_capture_integrity.py  test_capture_measurement.py  test_capture_measurement_binding.py  test_capture_measurement_commands.py  test_capture_measurement_contracts.py  test_capture_measurement_parsers.py  test_capture_measurement_rows.py  test_capture_measurement_trust.py  test_capture_profile_contracts.py  test_capture_rights.py  test_capture_segment.py  test_capture_windows.py  test_case_attestation.py  test_clip_input_contract.py  test_clip_loader.py  test_contracts.py  test_copilot_event_store.py  test_dataset_split.py  test_decoder_commands.py  test_decoder_golden_fixture.py  test_decoder_hevc10_golden_fixture.py  test_decoder_runtime.py  test_domain_events.py  test_event_store.py  test_hypotheses.py  test_immutable_store.py  (+27 more)
(+875 files in other folders)
