[project]
name = "scorevision"
version = "0.1.0"
description = "Functional CV scoring pipeline for beach volleyball (ScoreCheck)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pyobjc-framework-Vision>=10.0; platform_system == 'Darwin'",
    "pyobjc-framework-Quartz>=10.0; platform_system == 'Darwin'",
]

[project.scripts]
scorevision-label = "scorevision.vod_labeler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scorevision"]
